freq. words: better performance

--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
@@ -387,7 +387,7 @@
 		<div class="wrapper" id="getDataTrackTitleMostFrequentWords">
 				<div class="flexitem">
 					<div class="flexitem textwrapper chartlink" onclick="showChart('getDataTrackTitleMostFrequentWords')">
-						[% 'PLUGIN_VISUALSTATISTICS_MISCSTATS_TRACKTITLE_MOSTFREQUENTWORDS' | string; %]<span style="color: red !important;"> (might time out for larger libraries!)</span>
+						[% 'PLUGIN_VISUALSTATISTICS_MISCSTATS_TRACKTITLE_MOSTFREQUENTWORDS' | string; %]
 					</div>
 				</div>
 		</div>
