--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
@@ -19,38 +19,28 @@
 [% END %]
 </style>
 <script type="text/javascript">
+[% IF systemSkin == "material" %]
+	var colorSchemeLight = false;
+[% ELSE %]
 	if(top != self) top.location.replace(location);
-	[% IF systemSkin == "material" %]
-		var colorSchemeLight = false;
-		var elements = document.getElementsByClassName('vsleftarrow');
-		for (var i = 0; i < elements.length; i++){
-			elements[i].style.fill = "rgba(240, 240, 240, 1)";
-		}
-	[% ELSE %]
-		var colorSchemeLight = true;
-		var elements = document.getElementsByClassName('vsleftarrow');
-		for (var i = 0; i < elements.length; i++){
-			elements[i].style.fill = "rgba(102, 102, 102, 1)";
-		}
-	[% END %]
+	var colorSchemeLight = true;
+[% END %]
+[% IF usefullscreen == 1 %]
+	var usefullscreen = 1;
+[% END %]
 </script>
 <script type="text/javascript" src="js/chart.min.js"></script>
 <script type="text/javascript" src="js/chartjs-plugin-datalabels.min.js"></script>
 <script type="text/javascript" src="js/chartjs-config.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<div class="topline">
-	<div class="vsback-btn">
-	<a href="[% webroot %]index.html"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="0px" height="0px" viewBox="0 0 980 980" xml:space="preserve" class="vsbackbtnsvg"><path class="vsleftarrow" d="m245 735-244-245 244-245 245-245 44 43c24 24 43 44 43 44 0 1-76 78-170 171l-169 170h742v124h-742l169 170 170 170-87 87s-111-110-245-244z"/></svg></a>
-	</div>
-	<div class="toggle_container">
-		<label class="toggle">
-			<input id="toggleswitch_colorscheme" type="checkbox">
-			<span class="roundbutton"></span>
-		</label>
-		<span class="toggleswitch_text">charts color scheme: <span class="toggleswitch_text_strong" id="colorscheme_value">light</span></span>
-	</div>
-</div>
 <br>
+<div class="toggle_container">
+	<label class="toggle">
+		<input id="toggleswitch_colorscheme" type="checkbox">
+		<span class="roundbutton"></span>
+	</label>
+	<span class="toggleswitch_text">charts color scheme: <span class="toggleswitch_text_strong" id="colorscheme_value">light</span></span>
+</div><br>
 <div id="main" class="main">
 	<details><summary>[% 'PLUGIN_VISUALSTATISTICS_SECTION_ARTISTS' | string %]</summary>
 		<div class="filler"></div>
