--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/settings/basic.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/settings/basic.html
@@ -1,7 +1,32 @@
 [% page = "PLUGIN_VISUALSTATISTICS" %]
 [% PROCESS settings/header.html %]
-	[% WRAPPER setting title="PLUGIN_VISUALSTATISTICS_SETTINGS_BROWSERUSEFULLSCREEN" desc="PLUGIN_VISUALSTATISTICS_SETTINGS_BROWSERUSEFULLSCREEN_DESC" %]
-		<input type="checkbox" name="pref_usefullscreen" id="usefullscreen" [% IF prefs.usefullscreen %] checked [% END %]">
+[% IF apcenabled %]
+	[% WRAPPER setting title="PLUGIN_VISUALSTATISTICS_SETTINGS_DISPLAYAPCDUPES" desc="PLUGIN_VISUALSTATISTICS_SETTINGS_DISPLAYAPCDUPES_DESC" %]
+		<select name="pref_displayapcdupes" id="displayapcdupes">
+			[% FOREACH option = {
+				'0' => 'PLUGIN_VISUALSTATISTICS_SETTINGS_DISPLAYAPCDUPES_LMSONLY',
+				'1' => 'PLUGIN_VISUALSTATISTICS_SETTINGS_DISPLAYAPCDUPES_BOTH',
+				'2' => 'PLUGIN_VISUALSTATISTICS_SETTINGS_DISPLAYAPCDUPES_APCONLY',
+			} %]
+				<option [% IF prefs.displayapcdupes == option.key %]selected='selected' [% END %]value="[% option.key %]">[% option.value | string %]</option>
+			[%- END -%]
+		</select>
 	[% END %]
+	<br>
+[% END %]
+
+[% WRAPPER setting title="PLUGIN_VISUALSTATISTICS_SETTINGS_MINARTISTTRACKS" desc="PLUGIN_VISUALSTATISTICS_SETTINGS_MINARTISTTRACKS_DESC" %]
+	<input type="text" class="stdedit sliderInput_0_30_1" name="pref_minartisttracks" id="minartisttracks" value="[% prefs.minartisttracks %]" size="2">
+[% END %]
+<br>
+
+[% WRAPPER setting title="PLUGIN_VISUALSTATISTICS_SETTINGS_MINALBUMTRACKS" desc="PLUGIN_VISUALSTATISTICS_SETTINGS_MINALBUMTRACKS_DESC" %]
+	<input type="text" class="stdedit sliderInput_0_30_1" name="pref_minalbumtracks" id="minalbumtracks" value="[% prefs.minalbumtracks %]" size="2">
+[% END %]
+<br><br>
+
+[% WRAPPER setting title="PLUGIN_VISUALSTATISTICS_SETTINGS_BROWSERUSEFULLSCREEN" desc="PLUGIN_VISUALSTATISTICS_SETTINGS_BROWSERUSEFULLSCREEN_DESC" %]
+	<input type="checkbox" name="pref_usefullscreen" id="usefullscreen" [% IF prefs.usefullscreen %] checked [% END %]">
+[% END %]
 
 [% PROCESS settings/footer.html %]
