--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
@@ -939,7 +939,17 @@
 </div>
 <br><br>
 <div id="myNavChart" class="overlay">
-	<div class="overlay-content"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
+	<div class="overlay-content">
+		<a href="javascript:void(0)" class="closebtn" title="[% "PLUGIN_VISUALSTATISTICS_CLOSEOVERLAY" | string %]" onclick="closeNav()">
+			<svg id="closeicon" width="21" height="21" viewBox="0 0 30 30">
+				<path d="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"></path>
+			</svg>
+		</a>
+		<a id="saveasimage" download="" href="#" class="savebtn" title="[% "PLUGIN_VISUALSTATISTICS_SAVEASIMAGE" | string %]">
+			<svg id="dlicon" width="21" height="21" viewBox="0 0 24 24" fill="none" stroke-width="3" stroke-linecap="square" stroke-linejoin="arcs">
+				<path d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 9l-5 5-5-5M12 12.8V2.5"></path>
+			</svg>
+		</a>
 		<div class="chart-container">
 			<canvas id="chartCanvas"></canvas>
 			<div id="button_container">
@@ -981,7 +991,11 @@
 	</div>
 </div>
 <div id="myNavText" class="overlay">
-	<div class="overlay-content"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
+		<a href="javascript:void(0)" class="closebtn" title="[% "PLUGIN_VISUALSTATISTICS_CLOSEOVERLAY" | string %]" onclick="closeNav()">
+			<svg id="closeicon" width="21" height="21" viewBox="0 0 30 30">
+				<path d="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"></path>
+			</svg>
+		</a>
 		<div class="libstatwrapper">
 			<span class="theader">[% 'PLUGIN_VISUALSTATISTICS_MISCSTATS_LIBRARY_STATS_TEXT_HEADER' | string %]: <span id="headervlname"></span></span>
 		<table id="libstatstext" border="0"></table>
@@ -1144,7 +1158,14 @@
 	buttonOrderRestoreDefault:'[% "PLUGIN_VISUALSTATISTICS_CHARTS_BUTTON_ORDER_RESTORE_DEFAULT" | string %]',
 	buttonLabelsShow:'[% "PLUGIN_VISUALSTATISTICS_CHARTS_BUTTON_LABELS_SHOW" | string %]',
 	buttonLabelsHide:'[% "PLUGIN_VISUALSTATISTICS_CHARTS_BUTTON_LABELS_HIDE" | string %]',
+	LMSartist:'[% "ARTIST" | string %]',
+	LMSalbum:'[% "ALBUM" | string %]',
+	LMSgenre:'[% "GENRE" | string %]',
+	LMSyear:'[% "YEAR" | string %]',
+	LMSsongInfo:'[% "SONG_INFO" | string %]',
 	};
+	const LMSwebroot = "[% webroot %]";
+	const clickableBars = "[% clickablebars %]";
 </script>
 <script type="text/javascript" src="js/showchart.min.js"></script>
 <script type="text/javascript">
