add support for material skin

--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
@@ -1166,6 +1166,10 @@
 	};
 	const LMSwebroot = "[% webroot %]";
 	const clickableBars = "[% clickablebars %]";
+	var materialCaller = 0;
+	[% IF systemSkin == "material" %]
+	materialCaller = 1;
+	[% END %]
 </script>
 <script type="text/javascript" src="js/showchart.min.js"></script>
 <script type="text/javascript">
